force-app/main/default/objects/FNS_PredictiveAnalytics__c/FNS_PredictiveAnalytics__c.object-meta.xml
<CustomObject>
    <label>Predictive Analytics</label>
    <nameField>
        <label>Predictive Analytics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Predictive Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>