force-app/main/default/objects/FNS_PredictiveAnalytics__c/fields/FNS_Customer__c.field-meta.xml
<CustomField>
    <fullName>FNS_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Predictive Analytics</relationshipLabel>
    <relationshipName>CustomerPredictiveAnalytics</relationshipName>
    <type>Lookup</type>
</CustomField>