force-app/main/default/objects/FNS_PredictiveAnalytics__c/fields/FNS_CustomerName__c.field-meta.xml
<CustomField>
    <fullName>FNS_CustomerName__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>