force-app/main/default/objects/FNS_PredictiveAnalytics__c/fields/FNS_FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinancialAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Product</label>
    <referenceTo>FNS_FinancialAccount__c</referenceTo>
    <relationshipLabel>Predictive Analytic Product</relationshipLabel>
    <relationshipName>PredictiveAnalyticProduct</relationshipName>
    <type>Lookup</type>
</CustomField>