force-app/main/default/objects/FNS_PredictiveAnalytics__c/fields/FNS_FinancialAccountName__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinancialAccountName__c</fullName>
    <label>Facility Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>