force-app/main/default/objects/FNS_PredictiveAnalytics__c/fields/FNS_FinancialAccountTransactionName__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinancialAccountTransactionName__c</fullName>
    <label>Loan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>