force-app/main/default/objects/FNS_PredictiveAnalytics__c/fields/FNS_PriorityOrder__c.field-meta.xml
<CustomField>
    <fullName>FNS_PriorityOrder__c</fullName>
    <label>Priority Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>