force-app/main/default/objects/FNS_PredictiveAnalytics__c/fields/FNS_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>FNS_Recommendation__c</fullName>
    <label>Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>