force-app/main/default/objects/FNS_PredictiveAnalytics__c/fields/FNS_RecommendationDescription__c.field-meta.xml
<CustomField>
    <fullName>FNS_RecommendationDescription__c</fullName>
    <label>Recommendation Description</label>
    <type>TextArea</type>
</CustomField>