force-app/main/default/objects/FNS_PredictiveAnalytics__c/fields/FNS_RecommendationId__c.field-meta.xml
<CustomField>
    <fullName>FNS_RecommendationId__c</fullName>
    <label>Recommendation Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>