force-app/main/default/objects/FNS_PredictiveAnalytics__c/recordTypes/FNS_Predictive_Analytics.recordType-meta.xml
<RecordType>
    <fullName>FNS_Predictive_Analytics</fullName>
    <active>true</active>
    <label>Predictive Analytics</label>
</RecordType>