force-app/main/default/objects/FNS_PredictiveAnalytics__c/listViews/FNS_PredictiveAnalytics.listView-meta.xml
<ListView>
    <fullName>FNS_PredictiveAnalytics</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Predictive Analytics</label>
</ListView>